Avançando em PADRONIZAÇÃO DE ESTILO

--- a/src/components/NavBar/header.css
+++ b/src/components/NavBar/header.css
@@ -3,8 +3,7 @@ body{
     width: 100%;
     margin: auto;
     background-color: rgb(235, 235, 235);
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
+    font-family: 'Kanit, sans-serif;';
 }
 
 header{
